# kiwi

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs  components_add_remove.rs  components_insert.rs  iter_simple.rs  iter_wide.rs
benches/bench_apecs/: schedule.rs
benches/bench_bevy/: heavy_compute.rs  schedule.rs
benches/bench_kiwi/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
benches/bench_legion/: frag_iter.rs  heavy_compute.rs  simple_iter.rs
benches/bench_planck_ecs/: simple_insert.rs
benches/bench_shipyard/: add_remove.rs  frag_iter.rs  heavy_compute.rs  schedule.rs  simple_insert.rs  simple_iter.rs
benches/bench_specs/: heavy_compute.rs
examples/: simple.rs  tracing.rs
src/: archetype.rs  blobvec.rs  component.rs  entity.rs  events.rs  lib.rs  query.rs  resources.rs  schedule.rs  sparse_set.rs  system.rs  table.rs  utils.rs  world.rs
src/utils/: flat_tuple.rs  macros.rs  mod.rs  type_traits.rs  types.rs
