[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

[features]
trace = []

[dependencies]
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = "0.3"
tracing-flame = "0.2.0"
tracing-chrome = "0.7.1"

[[bench]]
name = "iter_simple"
harness = false

[[bench]]
name = "iter_wide"
harness = false

[[bench]]
name = "components_add_remove"
harness = false

[[bench]]
name = "components_insert"
harness = false

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "tracing"
path = "examples/tracing.rs"

