[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

[features]
default = ["tracing/max_level_off", "tracing/release_max_level_off"]

trace_max_level_off = ["tracing/max_level_off"]
trace_max_level_error = ["tracing/max_level_error"]
trace_max_level_warn = ["tracing/max_level_warn"]
trace_max_level_info = ["tracing/max_level_info"]
trace_max_level_debug = ["tracing/max_level_debug"]
trace_max_level_trace = ["tracing/max_level_trace"]

trace_release_max_level_off = ["tracing/release_max_level_off"]
trace_release_max_level_error = ["tracing/release_max_level_error"]
trace_release_max_level_warn = ["tracing/release_max_level_warn"]
trace_release_max_level_info = ["tracing/release_max_level_info"]
trace_release_max_level_debug = ["tracing/release_max_level_debug"]
trace_release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
bumpalo = { version = "3.15", features = ["allocator_api"] }
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
criterion = "0.5.1"
tracing-subscriber = "0.3"
tracing-flame = "0.2.0"
tracing-chrome = "0.7.1"

[[bench]]
name = "iter_simple"
harness = false

[[bench]]
name = "iter_wide"
harness = false

[[bench]]
name = "components_add_remove"
harness = false

[[bench]]
name = "components_insert"
harness = false

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "tracing"
path = "examples/tracing.rs"

