[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

[features]
default = ["tracing/max_level_off", "tracing/release_max_level_off"]

trace_max_level_off = ["tracing/max_level_off"]
trace_max_level_error = ["tracing/max_level_error"]
trace_max_level_warn = ["tracing/max_level_warn"]
trace_max_level_info = ["tracing/max_level_info"]
trace_max_level_debug = ["tracing/max_level_debug"]
trace_max_level_trace = ["tracing/max_level_trace"]

trace_release_max_level_off = ["tracing/release_max_level_off"]
trace_release_max_level_error = ["tracing/release_max_level_error"]
trace_release_max_level_warn = ["tracing/release_max_level_warn"]
trace_release_max_level_info = ["tracing/release_max_level_info"]
trace_release_max_level_debug = ["tracing/release_max_level_debug"]
trace_release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
bumpalo = { version = "3.15", features = ["allocator_api"] }
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
# examples
tracing-subscriber = "0.3"
tracing-flame = "0.2.0"
tracing-chrome = "0.7.1"

# benches
criterion = "0.5.1"

# benches utils
cgmath = { version = "0.18", features = ["serde"] }
rayon = "^1.5"

# other ecs
apecs = "0.8.1"
bevy_ecs = { version = "0.13", features = ["multi-threaded"] }
bevy_tasks = "0.13"
hecs = { version = "0.10", features = ["column-serialize", "row-serialize"] }
legion = "0.4"
planck_ecs = { version = "1.2", features = ["parallel"] }
shipyard = "0.6"
specs = {version = "0.20", features = ["serde"] }
specs-derive = "0.4.1"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "tracing"
path = "examples/tracing.rs"

